tests/snapshots/tui_snapshots__dashboard_200x15.snap
---
source: tests/tui_snapshots.rs
assertion_line: 25
expression: frame
---
" fast-folder   library │ templates   2 bases                                                                                                                                             highest ID0248 "
" → projects 12   archive not mounted                                                                                                                                                   ⚠ 1 needs you  ! "
" ⌕ / to search                                                                                                                                                                           12/12 · newest "
"┌ projects ────────────────────────────────────────────────────────────────────────────────────────────────────────────┐┌ ID0248 ──────────────────────────────────────────────────────────────────────┐"
"│  ID     PROJECT                                            SIZE CREATED    BASE     TEMPLATE       TAGS              ││ 2026-08-28_Lullaby_Remix_ID0248                                              █"
"│▸ ID0248 2026-08-28_Lullaby_Remix_ID0248               scanning… 2026-08-28 projects music-video    draft             █│ music-video   ·   projects   ·   created 2026-08-28                          █"
"│  ID0247 2026-08-27_Client_Onboarding_Acme_ID0247      scanning… 2026-08-27 projects general        client/Acme draft █│ scanning…   ·   2 notes   ·   2/4 todos done                                 █"
"│  ID0246 2026-08-26_Old_Shoot_ID0246                   scanning… 2026-08-26 projects client-project                   █│ ── tags ──────────────────────────────────────────────────────────────────── ║"
"│  ID0245 2026-08-25_Test_Run_ID0245                    scanning… 2026-08-25 projects music-video    draft             █│ ● draft                                                                      ║"
"│  ID0244 2026-08-24_Spring_Campaign_ID0244             scanning… 2026-08-24 projects general        client/Acme draft ║│ · add a tag                                                                  ║"
"│  ID0243 2026-08-23_Live_Session_ID0243                scanning… 2026-08-23 projects client-project                   ║│ ── todo ──────────────────────────────────────────────────────────────────── ║"
"│  ID0242 2026-08-22_Lullaby_Remix_ID0242               scanning… 2026-08-22 projects music-video    draft             ║│ Shoot                                                                    2/2 ║"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘└──────────────────────────────────────────────────────────────────────────────┘"
"                                                                                                                                                                                                        "
" / search  a actions  o open  t terminal  y copy path  Space mark  n new  T templates  → pane  ? help  c commands                                                                                       "
