tests/snapshots/tui_snapshots__dashboard_60x20.snap
---
source: tests/tui_snapshots.rs
assertion_line: 25
expression: frame
---
" fast-folder   library │ templates   2 bases highest ID0248 "
" → projects 12   archive not mounted       ⚠ 1 needs you  ! "
" ⌕ / to search                               12/12 · newest "
"┌ projects ────────────────────────────────────────────────┐"
"│  ID     PROJECT                                          │"
"│▸ ID0248 2026-08-28_Lullaby_Remix_ID0248                  │"
"│  ID0247 2026-08-27_Client_Onboarding_Acme_ID0247         │"
"│  ID0246 2026-08-26_Old_Shoot_ID0246                      │"
"│  ID0245 2026-08-25_Test_Run_ID0245                       │"
"│  ID0244 2026-08-24_Spring_Campaign_ID0244                │"
"│  ID0243 2026-08-23_Live_Session_ID0243                   │"
"│  ID0242 2026-08-22_Lullaby_Remix_ID0242                  │"
"│  ID0241 2026-08-21_Client_Onboarding_Acme_ID0241         │"
"│  ID0240 2026-08-20_Old_Shoot_ID0240                      │"
"│  ID0239 2026-08-19_Test_Run_ID0239                       │"
"│  ID0238 2026-08-18_Spring_Campaign_ID0238                │"
"│  ID0237 2026-08-17_Live_Session_ID0237                   │"
"└──────────────────────────────────────────────────────────┘"
"                                                            "
" → details  / search  a actions  o open  t terminal         "
