tests/snapshots/tui_snapshots__dashboard_below_60x45.snap
---
source: tests/tui_snapshots.rs
assertion_line: 25
expression: frame
---
" fast-folder   library │ templates   2 bases highest ID0248 "
" → projects 8   archive not mounted        ⚠ 1 needs you  ! "
"                                                            "
" ⌕ / to search                                 8/8 · newest "
"┌ projects ────────────────────────────────────────────────┐"
"│  ID     PROJECT                                          │"
"│▸ ID0248 2026-08-28_Lullaby_Remix_ID0248                  │"
"│  ID0247 2026-08-27_Client_Onboarding_Acme_ID0247         │"
"│  ID0246 2026-08-26_Old_Shoot_ID0246                      │"
"│  ID0245 2026-08-25_Test_Run_ID0245                       │"
"│  ID0244 2026-08-24_Spring_Campaign_ID0244                │"
"│  ID0243 2026-08-23_Live_Session_ID0243                   │"
"│  ID0242 2026-08-22_Lullaby_Remix_ID0242                  │"
"│  ID0241 2026-08-21_Client_Onboarding_Acme_ID0241         │"
"└──────────────────────────────────────────────────────────┘"
"┌ ID0248 ──────────────────────────────────────────────────┐"
"│ 2026-08-28_Lullaby_Remix_ID0248                          │"
"│ music-video   ·   projects   ·   created 2026-08-28      │"
"│ scanning…   ·   2 notes   ·   2/4 todos done             │"
"│ ── tags ──────────────────────────────────────────────── │"
"│ ● draft                                                  │"
"│ · add a tag                                              │"
"│ ── todo ──────────────────────────────────────────────── │"
"│ Shoot                                                2/2 │"
"│   [x] shoot the product close-ups                        │"
"│   [x] rough cut                                          │"
"│ Deliver                                              0/2 │"
"│   [ ] colour and sound mix                               │"
"│   [ ] deliver the 16:9 and 9:16 masters                  │"
"│ · add a todo                                             │"
"│ · add a phase                                            │"
"│ ── notes ─────────────────────────────────────────────── │"
"│ 2026-01-05 brief signed off, shoot booked                │"
"│ 2026-01-16 first cut sent to Acme                        │"
"│            hold the logo two seconds longer              │"
"│ · add a note                                             │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"└──────────────────────────────────────────────────────────┘"
"                                                            "
" / search  a actions  o open  t terminal  y copy path       "
