tests/snapshots/tui_snapshots__dashboard_over_80x24_pane_focused.snap
---
source: tests/tui_snapshots.rs
expression: frame
---
" fast-folder   library │ templates   2 bases                     highest ID0248 "
" → projects 12   archive not mounted                           ⚠ 1 needs you  ! "
" ⌕ / to search                                                   12/12 · newest "
"┌ ID0247 ──────────────────────────────────────────────────────────────────────┐"
"│ 2026-08-27_Client_Onboarding_Acme_ID0247                                     █"
"│ (no description)                                                             █"
"│ general   ·   projects   ·   created 2026-08-27                              █"
"│ scanning…   ·   2 notes   ·   2/4 todos done                                 █"
"│ ── tags ──────────────────────────────────────────────────────────────────── █"
"│ ● client/Acme                                                                █"
"│ ● draft                                                                      █"
"│ · add a tag                                                                  █"
"│ ── todo ──────────────────────────────────────────────────────────────────── █"
"│ Shoot                                                                    2/2 █"
"│   [x] shoot the product close-ups                                            █"
"│   [x] rough cut                                                              █"
"│ Deliver                                                                  0/2 █"
"│   [ ] colour and sound mix                                                   █"
"│   [ ] deliver the 16:9 and 9:16 masters                                      ║"
"│ · add a todo                                                                 ║"
"│ · add a phase                                                                ║"
"└──────────────────────────────────────────────────────────────────────────────┘"
"                                                                                "
" ← list  / search  a actions  Enter edit  + add  ? help                         "
