tests/snapshots/tui_snapshots__detail_pane_editing_a_variable_120x40.snap
---
source: tests/tui_snapshots.rs
assertion_line: 25
expression: frame
---
" fast-folder   library │ templates   2 bases                                                             highest ID0248 "
" → projects 12   archive not mounted                                                                   ⚠ 1 needs you  ! "
"                                                                                                                        "
" ⌕ / to search                                                                                           12/12 · newest "
"┌ projects ────────────────────────────────────────────────────────────┐┌ ID0248 ──────────────────────────────────────┐"
"│  ID     PROJECT                                                 SIZE ││ 2026-08-28_Lullaby_Remix_ID0248              │"
"│▸ ID0248 2026-08-28_Lullaby_Remix_ID0248                    scanning… ││ music-video   ·   projects                   │"
"│  ID0247 2026-08-27_Client_Onboarding_Acme_ID0247           scanning… ││ created 2026-08-28                           │"
"│  ID0246 2026-08-26_Old_Shoot_ID0246                        scanning… ││ scanning…   ·   2 notes                      │"
"│  ID0245 2026-08-25_Test_Run_ID0245                         scanning… ││ 1/2 todos done                               │"
"│  ID0244 2026-08-24_Spring_Campaign_ID0244                  scanning… ││ ── tags ──────────────────────────────────── │"
"│  ID0243 2026-08-23_Live_Session_ID0243                     scanning… ││ ● draft                                      │"
"│  ID0242 2026-08-22_Lullaby_Remix_ID0242                    scanning… ││ · add a tag                                  │"
"│  ID0241 2026-08-21_Client_Onboarding_Acme_ID0241           scanning… ││ ── todo ──────────────────────────────────── │"
"│  ID0240 2026-08-20_Old_Shoot_ID0240                        scanning… ││ [x] ingested the footage                     │"
"│  ID0239 2026-08-19_Test_Run_ID0239                         scanning… ││ [ ] deliver the video                        │"
"│  ID0238 2026-08-18_Spring_Campaign_ID0238                  scanning… ││ · add a todo                                 │"
"│  ID0237 2026-08-17_Live_Session_ID0237                     scanning… ││ · add a phase                                │"
"│                                                                      ││ ── notes ─────────────────────────────────── │"
"│                                                                      ││            first cut due Friday              │"
"│                                                                      ││ 2026-08-28 began the edit                    │"
"│                                                                      ││            rough cut by Friday, then colour  │"
"│                                                                      ││ · add a note                                 │"
"│                                                                      ││ ── variables ─────────────────────────────── │"
"│                                                                      ││ Artist / Band Name Ariana_Grande             │"
"│                                                                      ││ Project Title      Lullaby_Remix             │"
"│                                                                      ││ Client Type        Indie                     │"
"│                                                                      ││                                              │"
"│                                                                      ││                                              │"
"│                                                                      ││                                              │"
"│                                                                      ││                                              │"
"│                                                                      ││                                              │"
"│                                                                      ││                                              │"
"│                                                                      ││                                              │"
"│                                                                      ││                                              │"
"│                                                                      ││                                              │"
"│                                                                      ││                                              │"
"└──────────────────────────────────────────────────────────────────────┘└──────────────────────────────────────────────┘"
"                                                                                                                        "
" Enter keep  Esc cancel  F1 help                                                                                        "
