tests/snapshots/tui_snapshots__detail_pane_editing_the_description_120x40.snap
---
source: tests/tui_snapshots.rs
expression: frame
---
" fast-folder   library │ templates   2 bases                                                             highest ID0248 "
" → projects 12   archive not mounted                                                                   ⚠ 1 needs you  ! "
"                                                                                                                        "
" ⌕ / to search                                                                                           12/12 · newest "
"┌ projects ────────────────────────────────────────────────────────────┐┌ ID0248 ──────────────────────────────────────┐"
"│  ID     PROJECT                                                 SIZE ││ 2026-08-28_Lullaby_Remix_ID0248              │"
"│▸ ID0248 2026-08-28_Lullaby_Remix_ID0248                    scanning… ││ 8th, the label wants the chorus held longer  │"
"│  ID0247 2026-08-27_Client_Onboarding_Acme_ID0247           scanning… ││                                              │"
"│  ID0246 2026-08-26_Old_Shoot_ID0246                        scanning… ││                                              │"
"│  ID0245 2026-08-25_Test_Run_ID0245                         scanning… ││ music-video   ·   projects                   │"
"│  ID0244 2026-08-24_Spring_Campaign_ID0244                  scanning… ││ created 2026-08-28   ·   touched 2026-09-02  │"
"│  ID0243 2026-08-23_Live_Session_ID0243                     scanning… ││ scanning…   ·   2 notes                      │"
"│  ID0242 2026-08-22_Lullaby_Remix_ID0242                    scanning… ││ 1/2 todos done                               │"
"│  ID0241 2026-08-21_Client_Onboarding_Acme_ID0241           scanning… ││ ── tags ──────────────────────────────────── │"
"│  ID0240 2026-08-20_Old_Shoot_ID0240                        scanning… ││ ● draft                                      │"
"│  ID0239 2026-08-19_Test_Run_ID0239                         scanning… ││ · add a tag                                  │"
"│  ID0238 2026-08-18_Spring_Campaign_ID0238                  scanning… ││ ── todo ──────────────────────────────────── │"
"│  ID0237 2026-08-17_Live_Session_ID0237                     scanning… ││ [x] ingested the footage                     │"
"│                                                                      ││ [ ] deliver the video                        │"
"│                                                                      ││ · add a todo                                 │"
"│                                                                      ││ · add a phase                                │"
"│                                                                      ││ ── notes ─────────────────────────────────── │"
"│                                                                      ││            first cut due Friday              │"
"│                                                                      ││ 2026-08-28 began the edit                    │"
"│                                                                      ││            rough cut by Friday, then colour  │"
"│                                                                      ││ · add a note                                 │"
"│                                                                      ││ ── variables ─────────────────────────────── │"
"│                                                                      ││ Artist / Band Name Ariana_Grande             │"
"│                                                                      ││ Project Title      Lullaby                   │"
"│                                                                      ││ Client Type        Indie                     │"
"│                                                                      ││                                              │"
"│                                                                      ││                                              │"
"│                                                                      ││                                              │"
"│                                                                      ││                                              │"
"│                                                                      ││                                              │"
"│                                                                      ││                                              │"
"│                                                                      ││                                              │"
"└──────────────────────────────────────────────────────────────────────┘└──────────────────────────────────────────────┘"
"                                                                                                                        "
" Enter keep  Esc cancel  F1 help                                                                                        "
